--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Cecile Guyon
 
 # Short bio or description (displayed in the header)
-description: Data scientist junior
+description: Data Scientist junior
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars2.githubusercontent.com/u/14259943?v=3&u=18080b1e5e889c35bada70c8120bacd5148ffed6&s=400
 
 #
 # Flags below are optional
@@ -21,12 +21,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: cecileguyon
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: Cecile_Guyon
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
