--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Cecile Guyon
 
 # Short bio or description (displayed in the header)
-description: Data Scientist junior
+description: Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/14259943?v=3&u=18080b1e5e889c35bada70c8120bacd5148ffed6&s=400
